bk_ida/gccida/g0/df_bb_ru_local_compute
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ru_local_compute/src/df.c:2171:4: error: expected ';' after expression
rtx insn; // [rsp+58h] [rbp-8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ru_local_compute/src/df.c:2171:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+58h] [rbp-8h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ru_local_compute/src/df.c:2173:17: error: expected identifier or '('
 struct bb_info = &df_0->bbs[bb->index]; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ru_local_compute/src/df.c:2174:7: error: use of undeclared identifier 'insn'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ru_local_compute/src/df.c:2174:31: error: use of undeclared identifier 'insn'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ru_local_compute/src/df.c:2174:23: error: use of undeclared identifier 'insn'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ru_local_compute/src/df.c:2174:58: error: use of undeclared identifier 'insn'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ru_local_compute/src/df.c:2174:71: error: expected ')'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
                                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ru_local_compute/src/df.c:2174:5: note: to match this '('
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ru_local_compute/src/df.c:2176:7: error: use of undeclared identifier 'insn'
uid = insn->fld[0].rtuint; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ru_local_compute/src/df.c:2177:27: error: use of undeclared identifier 'insn'
if ( rtx_class[*( _WORD *)insn] == 105 ) 
                          ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ru_local_compute/src/obj/df.o] Error 1
